[package]
name = "tokens"
version = "0.1.0"
authors = ["Oleg Utkin <oleg_utkin@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_tarantool = "0.2"
rmp-serde = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
actix-web = "3"
futures = "0.3"
